--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,39 @@
   <head>
     <title>NyWiki</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class = "container" >
+      <ul class = "nav nav-tabs" >
+        <li><%= link_to "nyWiki", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+      </ul>
+
+      <% if flash[:notice] %>
+        <div class = "alert alert-success">
+          <button type = "button"
+                  class = "close"
+                  data-dismiss = "alert">
+                  &times;
+          </button>
+          <%= flash[:notice] %>
+        </div>
+
+      <% elsif flash[:alert] %>
+        <div class = "alert alert-warning">
+          <button type = "button"
+                  class = "close"
+                  data-dismiss = "alert">
+                  &times;
+          </button>
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+
     <%= yield %>
   </body>
 </html>
