--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,37 @@
   <body>
     <div class = "container" >
       <ul class = "nav nav-tabs" >
-        <li><%= link_to "nyWiki", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+
+        <li class="pull-left">
+          <%= link_to "nyWiki", root_path %>
+        </li>
+
+        <li class="pull-left">
+          <%= link_to "About", about_path %>
+        </li>
+
+        <% if user_signed_in? %>
+
+        <li class="pull-right">
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
+        </li>
+
+        <li class="pull-right">
+          <%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %>
+        </li>
+
+        <% else %>
+
+        <li class="pull-right">
+          <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %>
+        </li>
+
+        <li class="pull-right">
+          <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %>
+        </li>
+
+        <% end %>
+        
       </ul>
 
       <% if flash[:notice] %>
