--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class = "jumbotron">
   <h1> Welcome to nyWiki </h1>
   <p>
-    Sign in or Sign up today!
+    <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %> or <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %> today!
   </p>
 </div>
