--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
       <ul class = "nav nav-tabs" >
 
         <li class="pull-left">
-          <%= link_to "nyWiki", root_path %>
+          <%= link_to "Home", root_path %>
         </li>
 
         <li class="pull-left">
           <%= link_to "About", about_path %>
+        </li>
+
+        <li class="pull-left">
+          <%= link_to "Wikis", wikis_path %>
         </li>
 
         <% if user_signed_in? %>
@@ -41,7 +45,7 @@
         </li>
 
         <% end %>
-        
+
       </ul>
 
       <% if flash[:notice] %>
