--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-md-4">
     <h2>Physics</h2>
-    <p>Kimberly is an avid reader of Physics topics</p>
+    <p>Kimberly is an avid reader of Physics research</p>
   </div>
   <div class="col-md-4">
     <h2>Business</h2>
