--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag charges_path do %>
-  <h4>Click the button!</h4>
+  <h4>We process payments through Stripe.</h4>
+  <p>The fee for an upgrade is $10.00/month. You will be charged automatically month to month unless you downgrade before the 15th of the month.</p>
   <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount="<%= @stripe_btn_data[:amount] %>" data-description="<%= @stripe_btn_data[:description] %>" ></script>
 <% end %>
