--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -20,6 +20,7 @@
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
       <div class="form-group">
+        <%= render partial: 'wikis/form', locals: { f: f } %>
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
