--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,11 +1,15 @@
-
 <h1>All Wikis <%= link_to "Create New Wiki", new_wiki_path, class: 'btn btn-success' %></h1>
 
 <% @wikis.each do |wiki| %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <%= link_to wiki.title, wiki %>
+        <%-# Show private wikis if premium/admin. Otherwise, show only public wikis -%>
+        <% if current_user.premium? || current_user.admin? %>
+          <%= link_to wiki.title, wiki %>
+        <% elsif wiki.private == false %>
+          <%= link_to wiki.title, wiki %>
+        <% end %>
       </h4>
     </div>
   </div>
