--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,13 +3,12 @@
 <div class="row">
   <div class="col-md-8">
     <p><%= @wiki.body %></p>
+    <p> Private? <%= @wiki.private %></p>
   </div>
   <div class="col-md-4">
     <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
     <%if user_is_authorized_to_delete? %>
       <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     <% end %>
-   </div>
- </div>
   </div>
 </div>
