--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,7 @@
         </li>
 
         <li class="pull-left">
-          <%= link_to "About", about_path %>
-        </li>
-
-        <li class="pull-left">
-          <%= link_to "Wikis", wikis_path %>
+          <%= link_to "Reviews", wikis_path %>
         </li>
 
         <% if user_signed_in? %>
