Allow Users to Add and Remove Collaborators
* Define collaboration model with has_many :through
* Generate #create and #destroy actions for collaborations controller
* Update views to show collaborators alongside add and remove options

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -4,6 +4,8 @@
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
     <p> Private? <%= @wiki.private %></p>
+    <p> Author: <%= @wiki.user.email %></p>
+    <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
   </div>
   <div class="col-md-4">
     <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
