--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -24,5 +24,6 @@
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
+    <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
   </div>
 </div>
