--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,7 +3,9 @@
 <div class="row">
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
-    <!-- <p> Private? <%= @wiki.private %></p> -->
+    <p> Private? <%= @wiki.private %></p>
+    <p> Author: <%= @wiki.user.email %></p>
+    <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
   </div>
   <div class="col-md-4">
     <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
