Implement Authorization for Owner, Collaborators, and Admin
* Write policies that allow,
-> admins to view all posts
-> prem members to view public or private posts they own & collaborate on
-> std members to view public posts they own & posts they collaborate on

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
     <p> Private? <%= @wiki.private %></p>
-    <p> Author: <%= @wiki.user.email %></p>
+    <p> Owner: <%= @wiki.user.email %></p>
     <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
   </div>
   <div class="col-md-4">
