--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,55 +1,79 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h1>Edit Account</h1>
 
-<% if current_user.standard? %>
-  <h3 class = "text-danger">You are currently a standard member of BrewCrew</h3>
-  <%= link_to "Upgrade", new_charge_path, class: 'btn btn-success' %>
-<% end %>
-
-<% if current_user.premium? %>
-  <h3 class = "text-success">You are currently a premium member of BrewCrew</h3>
-  <%= link_to "Downgrade", downgrade_user_path(current_user), data: { confirm: "Are you sure you want to downgrade? All of your wikis will be made public. You will still be charged for the month if you are downgrading after the 15th of the month." }, class: 'btn btn-danger' %>
-<% end %>
-
-<h3>Change my password</h3>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class = "row">
+  <div class = "col-md-4">
+  <% if current_user.standard? %>
+    <h3>Plan: <b>Standard</b></h3>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <div class = "col-md-4">
+    <br />
+    <%= link_to "Upgrade", new_charge_path, class: 'btn btn-success' %>
   <% end %>
+  </div>
+</div>
+<div class = "row">
+  <div class = "col-md-4">
+  <% if current_user.premium? %>
+    <h3>Plan: <b>Premium</b></h3>
+  </div>
+  <div class = "col-md-4">
+    <br />
+    <%= link_to "Downgrade", downgrade_user_path(current_user), data: { confirm: "Are you sure you want to downgrade? All of your wikis will be made public. You will still be charged for the month if you are downgrading after the 15th of the month." }, class: 'btn btn-danger' %>
+  <% end %>
+  </div>
+</div>
+<br /><br /><br /><br />
+<div class = "row">
+  <div class = "col-md-4">
+    <h3>Change my password</h3>
+  </div>
+  <div class = "col-md-4">
+    <br />
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="field">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+        <% if @minimum_password_length %>
+          <br />
+          <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "off" %>
+        <br /><br />
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update Account", class: 'btn btn-success'%>
+      </div>
     <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+</div>
+<br /><br /><br /><br />
+<div class = "row">
+  <div class = "col-md-4">
+    <h3>Cancel my account</h3>
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+  <div class = "col-md-4">
+    <br />
+    <p>Unhappy? <%= button_to "Delete Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger'%></p>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
