--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NyWiki</title>
+    <title>The Brew Crew</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Dekko|Rock+Salt', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -12,11 +12,11 @@
     <div class = "container" >
       <ul class = "nav nav-tabs" >
 
-        <li class="pull-left">
+        <li class="pull-left" id="tab">
           <%= link_to "Home", root_path %>
         </li>
 
-        <li class="pull-left">
+        <li class="pull-left" id="tab">
           <%= link_to "Reviews", wikis_path %>
         </li>
 
@@ -64,7 +64,7 @@
           <%= flash[:alert] %>
         </div>
       <% end %>
-
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
