--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,7 +1,21 @@
-<% if current_user.admin? || current_user.premium? %>
+<%= form_for @wiki do |f| %>
   <div class="form-group">
-    <%= f.label :private, class: 'checkbox' do %>
-      <%= f.check_box :private %> Private wiki
+    <%= f.label :title %>
+    <%= f.text_field :title,
+          class: 'form-control',
+          placeholder: "Enter title here" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body,
+          rows: 8,
+          class: 'form-control',
+          placeholder: "Write review here" %>
+  </div>
+  <div class = "form-group">
+    <%= f.label :private, class: 'check_box' do %>
+      <%= f.check_box :private %> Private?
     <% end %>
   </div>
+    <%= f.submit "Save", class: 'btn btn-success' %>
 <% end %>
