--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,29 +1,16 @@
-<h1>Edit Wiki</h1>
+<h1>Edit Review </h1>
 
-<div class="row">
-  <div class="col-md-4">
-    <p>Guidelines for wikis</p>
-    <ul>
-      <li>Make sure it rhymes.</li>
-      <li>Don't use the letter "A".</li>
-      <li>The incessant use of hashtags will get you banned.</li>
-    </ul>
+<div class = "row">
+
+  <h4> Guidelines </h4>
+  <ul>
+    <li> Obscene content will be removed.</li>
+    <li> Topics inciting violence or harassment will be removed.</li>
+    <li> Phishing and/or advertising will be marked as spam.</li>
+  </ul>
+
+  <div class = 'cold-md-8'>
+    <%= render partial: 'form', locals: { wiki: @wiki } %>
   </div>
-  <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
-      </div>
-      <div class="form-group">
-        <%= render partial: 'wikis/form', locals: { f: f } %>
-        <%= f.submit "Save", class: 'btn btn-success' %>
-      </div>
-    <% end %>
-    <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
-  </div>
+
 </div>
