--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Wiki</h1>
+<h1>New Review</h1>
 
 <div class="row">
   <div class="col-md-4">
@@ -10,19 +10,8 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
-      </div>
-      <div class="form-group">
-        <%= render partial: 'wikis/form', locals: { f: f } %>
-        <%= f.submit "Save", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+    <div class="form-group">
+      <%= render partial: 'form', locals: { wiki: @wiki } %>
+    </div>
   </div>
 </div>
