--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,16 +1,19 @@
-<h1><%= @wiki.title %></h1>
+<h1><%= @wiki.title %>     <%= link_to "", edit_wiki_path(@wiki), class: 'glyphicon glyphicon-pencil' %></h1>
 
 <div class="row">
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
-    <p> Private? <%= @wiki.private %></p>
-    <p> Owner: <%= @wiki.user.email %></p>
-    <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <p> Owner: <%= @wiki.user.email %></p>
+    <% if @wiki.private %>
+      <p><em> Private </em></p>
+    <% else %>
+      <p><em> Public </em></p>
+    <% end %>
+    <%= link_to "", @wiki, method: :delete, class: 'glyphicon glyphicon-trash', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     <%if user_is_authorized_to_delete? %>
-      <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+      <%= render partial: 'collaborations/list', locals: { wiki: @wiki } %>
     <% end %>
   </div>
 </div>
